{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 146,
  "lineage": "34dff62f-02b0-6624-2763-53fb942f28b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "region1_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed84ad3e7ceecc54",
            "arn": "arn:aws:ec2:us-east-1:900720408661:elastic-ip/eipalloc-0ed84ad3e7ceecc54",
            "association_id": "eipassoc-039c8ea06dfca4b95",
            "domain": "vpc",
            "id": "eipalloc-0ed84ad3e7ceecc54",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ee320cb1750ce3b8",
            "private_dns": "ip-10-0-17-118.ec2.internal",
            "private_ip": "10.0.17.118",
            "public_dns": "ec2-54-174-50-125.compute-1.amazonaws.com",
            "public_ip": "54.174.50.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-EIP-Region1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-EIP-Region1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "region2_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0958ff8384ec2794a",
            "arn": "arn:aws:ec2:us-east-2:900720408661:elastic-ip/eipalloc-0958ff8384ec2794a",
            "association_id": "eipassoc-0a44a8292f2dc1b0f",
            "domain": "vpc",
            "id": "eipalloc-0958ff8384ec2794a",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09a64702136d796f7",
            "private_dns": "ip-10-1-17-42.us-east-2.compute.internal",
            "private_ip": "10.1.17.42",
            "public_dns": "ec2-18-222-247-90.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.247.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-EIP-Region2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-EIP-Region2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1c5d8c23330dee3",
            "arn": "arn:aws:ec2:us-east-1:900720408661:instance/i-0e1289a896bcc47bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1289a896bcc47bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfg-test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f01f477b0e649a58",
            "private_dns": "ip-10-0-17-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.17.250",
            "public_dns": "ec2-44-211-72-250.compute-1.amazonaws.com",
            "public_ip": "44.211.72.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6ac2272fc4ec303",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08deb4f9ef2086484",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Bastion"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e04d168f896898c2"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.region1_public_subnet1",
            "aws_vpc.region1_vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1c5d8c23330dee3",
            "arn": "arn:aws:ec2:us-east-1:900720408661:instance/i-01236566442960429",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01236566442960429",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfg-test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0618b5cb522b13659",
            "private_dns": "ip-10-0-21-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a4bfbf5d7ab9ac6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0634108e62f8274f7",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Private"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0231d2dd69ff3469a"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.private_sg",
            "aws_subnet.region1_private_subnet1",
            "aws_vpc.region1_vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "region1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:internet-gateway/igw-061f629ab021e8aa2",
            "id": "igw-061f629ab021e8aa2",
            "owner_id": "900720408661",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-IGW-Region1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-IGW-Region1"
            },
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "region2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900720408661:internet-gateway/igw-015837043b4f287d1",
            "id": "igw-015837043b4f287d1",
            "owner_id": "900720408661",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-IGW-Region2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-IGW-Region2"
            },
            "vpc_id": "vpc-0e976833c1b234ae1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "region1_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed84ad3e7ceecc54",
            "association_id": "eipassoc-039c8ea06dfca4b95",
            "connectivity_type": "public",
            "id": "nat-0f1b05e21a16bdb1f",
            "network_interface_id": "eni-0ee320cb1750ce3b8",
            "private_ip": "10.0.17.118",
            "public_ip": "54.174.50.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08deb4f9ef2086484",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-Region1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-Region1"
            }
          },
          "dependencies": [
            "aws_eip.region1_nat_eip",
            "aws_internet_gateway.region1_igw",
            "aws_subnet.region1_public_subnet1",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "region2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0958ff8384ec2794a",
            "association_id": "eipassoc-0a44a8292f2dc1b0f",
            "connectivity_type": "public",
            "id": "nat-0afc758c658792043",
            "network_interface_id": "eni-09a64702136d796f7",
            "private_ip": "10.1.17.42",
            "public_ip": "18.222.247.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c65481309fec885c",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-Region2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-NAT-Region2"
            }
          },
          "dependencies": [
            "aws_eip.region2_nat_eip",
            "aws_internet_gateway.region2_igw",
            "aws_subnet.region2_public_subnet1",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "region1_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:route-table/rtb-0322a2105ab3944e2",
            "id": "rtb-0322a2105ab3944e2",
            "owner_id": "900720408661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f1b05e21a16bdb1f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-RT-Region1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-RT-Region1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.region1_nat_eip",
            "aws_internet_gateway.region1_igw",
            "aws_nat_gateway.region1_nat",
            "aws_subnet.region1_public_subnet1",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "region1_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:route-table/rtb-05446cd4c78e2adaa",
            "id": "rtb-05446cd4c78e2adaa",
            "owner_id": "900720408661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061f629ab021e8aa2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-RT-Region1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-RT-Region1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.region1_igw",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "region2_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900720408661:route-table/rtb-0fe7137905830c9b2",
            "id": "rtb-0fe7137905830c9b2",
            "owner_id": "900720408661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0afc758c658792043",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-RT-Region2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-RT-Region2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e976833c1b234ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.region2_nat_eip",
            "aws_internet_gateway.region2_igw",
            "aws_nat_gateway.region2_nat",
            "aws_subnet.region2_public_subnet1",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "region2_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900720408661:route-table/rtb-05c4e47703149509b",
            "id": "rtb-05c4e47703149509b",
            "owner_id": "900720408661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015837043b4f287d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-RT-Region2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-RT-Region2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e976833c1b234ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.region2_igw",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "region1_private_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fce7590f64edc28",
            "route_table_id": "rtb-0322a2105ab3944e2",
            "subnet_id": "subnet-0634108e62f8274f7"
          },
          "dependencies": [
            "aws_eip.region1_nat_eip",
            "aws_internet_gateway.region1_igw",
            "aws_nat_gateway.region1_nat",
            "aws_route_table.region1_private_rt",
            "aws_subnet.region1_private_subnet1",
            "aws_subnet.region1_public_subnet1",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "region1_public_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce752d66716e8186",
            "route_table_id": "rtb-05446cd4c78e2adaa",
            "subnet_id": "subnet-08deb4f9ef2086484"
          },
          "dependencies": [
            "aws_internet_gateway.region1_igw",
            "aws_route_table.region1_public_rt",
            "aws_subnet.region1_public_subnet1",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "region1_public_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fafae4af5991602c",
            "route_table_id": "rtb-05446cd4c78e2adaa",
            "subnet_id": "subnet-0f618a4de38207559"
          },
          "dependencies": [
            "aws_internet_gateway.region1_igw",
            "aws_route_table.region1_public_rt",
            "aws_subnet.region1_public_subnet2",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "region2_private_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a94e938092e89ef4",
            "route_table_id": "rtb-0fe7137905830c9b2",
            "subnet_id": "subnet-0ec8ae7e30c8f203e"
          },
          "dependencies": [
            "aws_eip.region2_nat_eip",
            "aws_internet_gateway.region2_igw",
            "aws_nat_gateway.region2_nat",
            "aws_route_table.region2_private_rt",
            "aws_subnet.region2_private_subnet1",
            "aws_subnet.region2_public_subnet1",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "region2_public_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07986e40f77c2bb0a",
            "route_table_id": "rtb-05c4e47703149509b",
            "subnet_id": "subnet-0c65481309fec885c"
          },
          "dependencies": [
            "aws_internet_gateway.region2_igw",
            "aws_route_table.region2_public_rt",
            "aws_subnet.region2_public_subnet1",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "region2_public_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1215a119a83fc43",
            "route_table_id": "rtb-05c4e47703149509b",
            "subnet_id": "subnet-054a7dbf9b392dbd7"
          },
          "dependencies": [
            "aws_internet_gateway.region2_igw",
            "aws_route_table.region2_public_rt",
            "aws_subnet.region2_public_subnet2",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:security-group/sg-0e04d168f896898c2",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e04d168f896898c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.38.245/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "66.98.98.9/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "900720408661",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Bastion-SG"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:security-group/sg-0231d2dd69ff3469a",
            "description": "Security group for private instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0231d2dd69ff3469a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.16.0/21"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "900720408661",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Private-SG"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Private-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "region1_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:subnet/subnet-0634108e62f8274f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0634108e62f8274f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900720408661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-Subnet1-Region1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-Subnet1-Region1",
              "Type": "Private"
            },
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "region1_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:subnet/subnet-08deb4f9ef2086484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08deb4f9ef2086484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900720408661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet1-Region1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet1-Region1",
              "Type": "Public"
            },
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "region1_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:subnet/subnet-0f618a4de38207559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.18.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f618a4de38207559",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900720408661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet2-Region1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet2-Region1",
              "Type": "Public"
            },
            "vpc_id": "vpc-07615547ba2be2646"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "region2_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900720408661:subnet/subnet-0ec8ae7e30c8f203e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.20.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec8ae7e30c8f203e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900720408661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-Subnet1-Region2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Private-Subnet1-Region2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e976833c1b234ae1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "region2_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900720408661:subnet/subnet-0c65481309fec885c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.16.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c65481309fec885c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900720408661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet1-Region2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet1-Region2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e976833c1b234ae1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "region2_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900720408661:subnet/subnet-054a7dbf9b392dbd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.18.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054a7dbf9b392dbd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900720408661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet2-Region2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-Public-Subnet2-Region2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e976833c1b234ae1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "region1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900720408661:vpc/vpc-07615547ba2be2646",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.16.0/21",
            "default_network_acl_id": "acl-0c6ac2269552c6e8b",
            "default_route_table_id": "rtb-0520f24c5218d4b9f",
            "default_security_group_id": "sg-0d7efc4061a5b5e06",
            "dhcp_options_id": "dopt-061c111fa1624be54",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07615547ba2be2646",
            "instance_tenancy": "default",
            "ipv4_ipam_pool_id": "ipam-pool-08f6531d08d2924a4",
            "ipv4_netmask_length": 21,
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0520f24c5218d4b9f",
            "owner_id": "900720408661",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-VPC-Region1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-VPC-Region1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "region2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tfg-test-account1-region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900720408661:vpc/vpc-0e976833c1b234ae1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.16.0/21",
            "default_network_acl_id": "acl-0b409a47d9c5187bc",
            "default_route_table_id": "rtb-09e8dac7454d90c90",
            "default_security_group_id": "sg-08875bcba0a3c83ad",
            "dhcp_options_id": "dopt-0275e44699e4f7bf9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e976833c1b234ae1",
            "instance_tenancy": "default",
            "ipv4_ipam_pool_id": "ipam-pool-084e88a5e78284bb8",
            "ipv4_netmask_length": 21,
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e8dac7454d90c90",
            "owner_id": "900720408661",
            "tags": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-VPC-Region2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "TFG-Test-Account1-VPC-Region2"
            }
          }
        }
      ]
    }
  ]
}